# deep-research

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  styleguide.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py  models.py  routes.py  storage.py  telemetry.py
backend/app/agents/: chat.py  context.py  orchestrator.py  researcher.py  title.py  tools.py
backend/app/evals/: client.py  judges.py  runner.py  trace_context.py
data/projects/f76588eb-f73f-4fe8-b42e-4eeadd4ceaf7/: activity.json  metadata.json  metrics.json  report.md
data/projects/f8d10289-0d79-40dd-aab8-835aac507462/: activity.json  metadata.json  metrics.json  report.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ChatPane.tsx  MetricsView.tsx  NewProjectModal.tsx  ProgressView.tsx  ReportView.tsx  RevisionModal.tsx  Sidebar.tsx  SidebarProject.tsx  TabBar.tsx  statusConfig.ts
frontend/src/pages/: Dashboard.tsx  HowItWorks.tsx
frontend/src/presentation/: drilldowns.ts  presentation.ts  slides.ts
searxng/: settings.yml
